+ Reworked the way the server retrieves cases. + Now retrives a huge list of all cases, including all of their content, while adding the similarity